fixed white space bug

--- a/src/components/Navigation/Navigation.scss
+++ b/src/components/Navigation/Navigation.scss
@@ -4,6 +4,7 @@
   position: fixed;
   z-index: 99999999;
   width: 100%;
+  max-width: 100vw;
   justify-content: space-between;
   background-color: none;
   transition: 0.25s ease-in;
