--- a/src/components/SplitScreen/SplitScreen.scss
+++ b/src/components/SplitScreen/SplitScreen.scss
@@ -7,6 +7,7 @@ $lg-wrap: calc (1920px / 2);
 .full-screen {
   padding: 0px !important;
   margin: 0px !important;
+  max-width: 100vw;
   .split-screen {
     min-height: 98vh;
     padding: 0px !important;
