--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -13,6 +13,15 @@
   background: transparent;
 }
 
+html,body
+{
+    width: 100%;
+    height: 100%;
+    margin: 0px;
+    padding: 0px;
+    overflow-x: hidden; 
+}
+
 body {
   overflow-y: scroll;
   .container {
